--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,42 @@
-protff2/
-Yeni klasör/
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Cache
+.cache/
+.temp/
+.tmp/
+
+# Coverage
+coverage/
+
+# Railway
+.railway/
+
+# Vite
+vite.config.js.timestamp-*
