--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "ali-kok-portfolio",
   "version": "1.0.0",
   "description": "Professional portfolio website for Ali Kök - Software Developer",
-  "main": "index.html",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "npx serve dist -s -l 3000",
     "preview": "vite preview",
     "lint": "eslint assets/js/**/*.js",
     "lint:fix": "eslint assets/js/**/*.js --fix",
@@ -51,7 +52,8 @@
     "vite-bundle-analyzer": "^0.7.0"
   },
   "dependencies": {
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^3.5.0",
+    "serve": "^14.2.1"
   },
   "browserslist": [
     "> 1%",
